# 3DGallery

./: settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/schemas/cn.ololee.create3dgallery.database.PictureDatabase/: 1.json
app/src/androidTest/java/cn/ololee/create3dgallery/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: index.html
app/src/main/java/cn/ololee/create3dgallery/: App.java  MainActivity.java  MwebViewClient.java  WebActivity.java
app/src/main/res/layout/: activity_main.xml  activity_web.xml  item_grid_image.xml  item_list_group.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/test/java/cn/ololee/create3dgallery/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
launcherlocalweb/: build.gradle
launcherlocalweb/src/main/: AndroidManifest.xml
launcherlocalweb/src/main/assets/: es-module-shims.js  index.html  landleveler.1923ccd4.js  tractor.html
launcherlocalweb/src/main/java/cn/ololee/launcherlocalweb/: App.java  (+6 more)
launcherlocalweb/src/main/res/layout/: activity_main.xml
launcherlocalweb/src/main/res/values/: strings.xml  themes.xml
launcherlocalweb/src/main/res/values-night/: themes.xml
localserver/: build.gradle
localserver/src/main/: AndroidManifest.xml
localserver/src/main/cpp/: CMakeLists.txt  localserver.cpp
localserver/src/main/cpp/common/: common.h  mongoose.c  mongoose.h
localserver/src/main/cpp/server/: server.cpp  server.h
(+16 files in other folders)
